fix Header buttons on mobile to be more flexible for screen sizes and text content from translations

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -91,9 +91,10 @@ div[direction="left"] {
   }
 
   .gg-header-container__buttons button {
-    width: 126px;
-    max-width: 126px;
+    width: auto;
     max-height: 38px;
     padding: 6px;
+    padding-left: 12px;
+    padding-right: 12px;
   }
 }
